# cli-llm

./: .gitignore  Makefile  SCHEME.excalidraw  do_tests.py  pyproject.toml
old_src/: clillm.old.py  clillm.py
src/: clillm.py  launch.py
src/kernel/: command.py  command_module.py  commands.py  config.py  context_history.py  kernel.py  states.py
src/lazyagent/: __main__.py  application.py  core.py  module_llm.py  module_tui.py  modules.py  utility.py
src/lazyagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/modules/: module_core.py  module_io.py
tests/: test_config_default.json  test_module_core.py
