[build-system]
requires = ["setuptools", "wheel"]      #TODO: Add huggingface-hub, llama-cpp
build-backend = "setuptools.build_meta"

[project]
name = "lazyagent"
version = "0.1.0"
description = "TODO: Description of the lazyAgent package"
authors = [
  { name = "Louis-Quentin Noé", email = "louis-quentin.pa.noe@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
lazyllm = "lazyagent.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff"]

[tool.pytest.ini_options]
addopts = "--cov=lazyagent --cov-report=lcov"
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
